Fixing the bold type that had moved out of place

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -273,3 +273,7 @@ button {
   background: rgba(0,0,0,0.4);
   font-family: helvetica, sans-serif;
 }
+
+.bold {
+  font-weight: bold;
+}
